aarzoo ne yaad dilaya

--- a/public/stylesheets/adminView.css
+++ b/public/stylesheets/adminView.css
@@ -36,7 +36,7 @@ body {
 }
 
 /* side navbar */
-.side-navbar .border-custom{
+.side-navbar .border-custom {
     border-bottom: #4d312c solid 4px;
 }
 
@@ -55,6 +55,24 @@ body {
     color: white !important;
 }
 
+.menu-button-focus {
+    border-bottom: #fe5f41 solid 4px;
+
+}
+
+.menu-button-focus-off {
+    border-bottom: none;
+
+}
+
+.menu-item-focus {
+    display: block;
+}
+
+.menu-item-focus-off {
+    display: none;
+}
+
 #menu .cards {
     border: #d1c9c8 solid 1px;
     border-radius: 10px;
@@ -64,4 +82,54 @@ body {
     border: #f1edec00 solid 1px;
     border-radius: 0;
     box-shadow: 1px 1px 20px #f1edec9d;
+}
+
+#menu #menuItem img {
+    width: 150px;
+    height: 150px;
+}
+
+#menu .price {
+    background-color: #fe5f41;
+}
+
+#menu .description {
+    min-height: 100px;
+    overflow: hidden;
+}
+
+#menu .delete-item {
+
+    height: 80px;
+    width: 50px;
+}
+#menu .delete-item .edit a{
+    padding: 16px;
+}
+#menu .delete-item .delete a{
+    padding: 16px 19px;
+    /* height: 60px; */
+    /* width: 60px; */
+}
+
+.for-delete:hover .delete-item a{
+    background-color: #fe5f41;
+}
+
+#menu .delete-item a:link {
+    color: white;
+}
+
+#menu .delete-item a:visited {
+
+    color: white;
+}
+
+#menu .delete-item a:hover {
+    color: white;
+    background-color: #e74929;
+}
+
+#menu .delete-item a:active {
+    color: white;
 }
