--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<div id="topHeader" class="container-fluid position-relative px-0">
+<div id="topHeader" class="container-fluid position-relative px-0" style="z-index: 2;">
     <div class="for-admin position-absolute top-0 start-50 translate-middle-x w-100">
         <div class="container-fluid px-0 for-shadow ">
             <div class="container-fluid container-lg py-0 py-lg-3">
